traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: type mismatch;
 found   : Unit
 required: plm.universe.Direction
    a= getDirection
     ^Snake:31: error: type mismatch;
 found   : Unit
 required: Boolean
    setDirection(a:Direction)
                ^